--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ html, body{
     padding: 0 ;
     margin: 0 ;
     color: white;
-    overflow: hidden;
 }
 
 #main {
@@ -15,7 +14,7 @@ html, body{
 
 .content{
     position: relative;
-    top: 80px;
+    top: 70px;
     height: 100%;
     background-color: #fafafafa;
 }
@@ -24,7 +23,7 @@ html, body{
     width: 100%;
     max-width: 360px;
     background: #f1c40f;
-    height: 80px;
+    height: 70px;
     text-align: center;
     position: fixed;
     top: 0;
@@ -33,7 +32,6 @@ html, body{
 
 .header_1{
     display: flex;
-    flex-direction: row;
     justify-content: center;
     height: 100%;
     flex-direction: row;
@@ -44,15 +42,15 @@ html, body{
     display: flex;
     height: 100%;
     background: url('img/compact-disc%20(4).png') center center no-repeat;
-    background-size: 60px 60px;
+    background-size: 40px 40px;
 }
 
 .header_logo{
+    position: relative;
+    left: -5%;
+    top: 8%;
     color: #2c3e50;
-    font-size: 55px;
-    margin: 0;
-    padding: 0;
-    display: flex;
+    font-size: 40px;
     font-family: 'Noto Serif', serif;
 }
 
@@ -69,7 +67,7 @@ html, body{
     width: 100%;
     max-width: 360px;
     background: #f1c40f;
-    height: 80px;
+    height: 65px;
     text-align: center;
     position: fixed;
     bottom: 0;
@@ -77,71 +75,78 @@ html, body{
 }
 
 .line_1{
-    border: 2px solid #2c3e50;
+    border: 0px solid #2c3e50;
     height:60px;
-    width: 0px;
+    width: 1%;
     top: 10px;
     padding: 0;
     margin: 0;
     position: absolute;
-    left: 123px;
+    left: 25%;
     background-color: #2c3e50;
     border-radius: 50%;
 }
 .line_2{
-    border: 2px solid #2c3e50;
+    border: 0px solid #2c3e50;
     height:60px;
-    width: 0px;
+    width: 1%;
     top: 10px;
     padding: 0;
     margin: 0;
     position: absolute;
-    left: 250px;
+    left: 49%;
     background-color: #2c3e50;
     border-radius: 50%;
 }
 .line_3{
-    border: 2px solid #2c3e50;
+    border: 0px solid #2c3e50;
     height:60px;
-    width: 0px;
+    width: 1%;
     top: 10px;
     padding: 0;
     margin: 0;
     position: absolute;
-    left: 375px;
+    left: 74%;
     background-color: #2c3e50;
     border-radius: 50%;
 }
 .footer_ico_1{
+    position: absolute;
     height: 100%;
-    width: 123px;
+    width: 24%;
+    top: 50%;
+    left: 0%;
+    transform: translate(0%, -45%);
     background: url('img/house-black-silhouette-without-door%20(1).png') center center no-repeat;
-    background-size: 50px 50px;
+    background-size: 40px 40px;
 }
 .footer_ico_2{
     position: absolute;
-    top: 0px;
-    left: 125px;
     height: 100%;
-    width: 123px;
+    width: 24%;
+    top: 50%;
+    left: 25%;
+    transform: translate(0%, -45%);
     background: url('img/heart.png') center center no-repeat;
-    background-size: 50px 50px;
+    background-size: 40px 40px;
 }
 .footer_ico_3{
     position: absolute;
-    top: 0px;
-    left: 250px;
     height: 100%;
-    width: 123px;
+    width: 24%;
+    top: 50%;
+    left: 50%;
+    transform: translate(0%, -45%);
     background: url('img/musica-searcher.png') center center no-repeat;
-    background-size: 50px 50px;
+    background-size: 40px 40px;
 }
 .footer_ico_4{
     position: absolute;
-    top: 0px;
-    left: 375px;
     height: 100%;
-    width: 123px;
+    width: 24%;
+    top: 50%;
+    left: 75%;
+    transform: translate(0%, -45%);
     background: url('img/round-account-button-with-user-inside.png') center center no-repeat;
-    background-size: 50px 50px;
+    background-size: 40px 40px;
 }
