--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body{
 
 #main {
     width: 100%;
-    max-width: 360px;
+
     margin: 0 auto;
     height: 100vh;
     background-color: red;
@@ -21,7 +21,6 @@ html, body{
 
 .header{
     width: 100%;
-    max-width: 360px;
     background: #f1c40f;
     height: 70px;
     text-align: center;
@@ -33,7 +32,12 @@ html, body{
 .header_1{
     display: flex;
     justify-content: center;
+    text-align: center;
     height: 100%;
+    width: 340px;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%,0%);
     flex-direction: row;
 }
 
@@ -41,6 +45,7 @@ html, body{
     width: 100px;
     display: flex;
     height: 100%;
+    float: left;
     background: url('img/compact-disc%20(4).png') center center no-repeat;
     background-size: 40px 40px;
 }
@@ -49,6 +54,7 @@ html, body{
     position: relative;
     left: -5%;
     top: 8%;
+    float: right;
     color: #2c3e50;
     font-size: 40px;
     font-family: 'Noto Serif', serif;
@@ -65,7 +71,6 @@ html, body{
 
 .footer{
     width: 100%;
-    max-width: 360px;
     background: #f1c40f;
     height: 65px;
     text-align: center;
@@ -77,7 +82,7 @@ html, body{
 .line_1{
     border: 0px solid #2c3e50;
     height:60px;
-    width: 1%;
+    width: 2px;
     top: 10px;
     padding: 0;
     margin: 0;
@@ -89,7 +94,7 @@ html, body{
 .line_2{
     border: 0px solid #2c3e50;
     height:60px;
-    width: 1%;
+    width: 2px;
     top: 10px;
     padding: 0;
     margin: 0;
@@ -101,7 +106,7 @@ html, body{
 .line_3{
     border: 0px solid #2c3e50;
     height:60px;
-    width: 1%;
+    width: 2px;
     top: 10px;
     padding: 0;
     margin: 0;
