--- a/style.css
+++ b/style.css
@@ -82,9 +82,9 @@ html, body{
 
 .line_1{
     border: 0px solid #2c3e50;
-    height:60px;
+    height:55px;
     width: 2px;
-    top: 10px;
+    top: 7px;
     padding: 0;
     margin: 0;
     position: absolute;
@@ -94,9 +94,9 @@ html, body{
 }
 .line_2{
     border: 0px solid #2c3e50;
-    height:60px;
+    height:55px;
     width: 2px;
-    top: 10px;
+    top: 7px;
     padding: 0;
     margin: 0;
     position: absolute;
@@ -106,9 +106,9 @@ html, body{
 }
 .line_3{
     border: 0px solid #2c3e50;
-    height:60px;
+    height:55px;
     width: 2px;
-    top: 10px;
+    top: 7px;
     padding: 0;
     margin: 0;
     position: absolute;
@@ -133,7 +133,7 @@ html, body{
     top: 50%;
     left: 25%;
     transform: translate(0%, -45%);
-    background: url('img/heart.png') center center no-repeat;
+    background: url('img/favorite-heart-button.png') center center no-repeat;
     background-size: 40px 40px;
 }
 .footer_ico_3{
@@ -156,3 +156,5 @@ html, body{
     background: url('img/round-account-button-with-user-inside.png') center center no-repeat;
     background-size: 40px 40px;
 }
+
+/*Top*/
