--- a/style.css
+++ b/style.css
@@ -2,15 +2,14 @@ html, body{
     padding: 0 ;
     margin: 0 ;
     color: white;
-    
 }
 
 #main {
     width: 100%;
-
+    background-color: #fafafafa;
     margin: 0 auto;
-    height: 100vh;
-    background-color: red;
+    min-height: 100vh;
+    height: auto;
 }
 
 .content{
@@ -47,7 +46,7 @@ html, body{
     display: flex;
     height: 100%;
     float: left;
-    background: url('img/compact-disc%20(4).png') center center no-repeat;
+    background: url('img/Logo/compact-disc%20(4).png') center center no-repeat;
     background-size: 40px 40px;
 }
 
@@ -64,7 +63,7 @@ html, body{
 .hr_header{
     margin: 0;
     border: none;
-    height: 3px;
+    height: 2px;
     color: #2c3e50;
     background-color: #2c3e50;
     
@@ -123,7 +122,7 @@ html, body{
     top: 50%;
     left: 0%;
     transform: translate(0%, -45%);
-    background: url('img/house-black-silhouette-without-door%20(1).png') center center no-repeat;
+    background: url('img/Menu/house-black-silhouette-without-door%20(1).png') center center no-repeat;
     background-size: 40px 40px;
 }
 .footer_ico_2{
@@ -133,7 +132,7 @@ html, body{
     top: 50%;
     left: 25%;
     transform: translate(0%, -45%);
-    background: url('img/favorite-heart-button.png') center center no-repeat;
+    background: url('img/Menu/favorite-heart-button.png') center center no-repeat;
     background-size: 40px 40px;
 }
 .footer_ico_3{
@@ -143,7 +142,7 @@ html, body{
     top: 50%;
     left: 50%;
     transform: translate(0%, -45%);
-    background: url('img/musica-searcher.png') center center no-repeat;
+    background: url('img/Menu/musica-searcher.png') center center no-repeat;
     background-size: 40px 40px;
 }
 .footer_ico_4{
@@ -153,8 +152,144 @@ html, body{
     top: 50%;
     left: 75%;
     transform: translate(0%, -45%);
-    background: url('img/round-account-button-with-user-inside.png') center center no-repeat;
+    background: url('img/Menu/round-account-button-with-user-inside.png') center center no-repeat;
     background-size: 40px 40px;
 }
 
 /*Top*/
+.top_main{
+    width: 100%;
+    height: auto;
+}
+.top_logo{
+    font-size: 30px;
+    color: #2c3e50;
+    padding: 10px;
+}
+.top_box{
+    margin: 0px 10px 10px 10px ;
+    width: 94%;
+    min-height: 100px;
+    height: auto;
+    background: -webkit-linear-gradient(53deg, rgba(233,255,64,1) 0%, rgba(0,128,128,1) 100%);
+    opacity: .5;
+}
+
+/*Play_bar*/
+.hr_play_bar{
+    margin: 0;
+    padding: 0;
+    transform: translate(0px, -53px);
+    border: none;
+    height: 2px;
+    color: #2c3e50;
+    background-color: #CECECE; 
+    justify-content: center;
+    text-align: center;
+}
+.play_bar{
+    transform: translate(0%, -110%);
+    width: 100%;
+    height: 48px;
+    background-color: #f1f2f6 ;
+    position: absolute;
+    
+}
+.play_bar_container{
+    height: 100%;
+    width: 98%;
+    margin-left: 1%;
+    margin-right: 1%;
+    display: flex;
+    flex-direction: row;
+}
+.button_left{
+    height: 100%;
+    width: 45px;
+    background: url('img/Navigation/play-and-pause-button.png') center center no-repeat;
+    background-size: 35px 35px;
+    transform: rotate(180deg);
+}
+.button_pause{
+    height: 100%;
+    width: 45px;
+    background: url('img/Navigation/pause-button%20(2).png') center center no-repeat;
+    background-size: 36px 36px;
+}
+.button_right{
+    height: 100%;
+    width: 45px;
+    background: url('img/Navigation/play-and-pause-button.png') center center no-repeat;
+    background-size: 35px 35px;
+}
+.button_random{
+    height: 100%;
+    width: 45px;
+    background-color: blue;
+    background: url('img/Navigation/couple-of-arrows-changing-places.png') center center no-repeat;
+    background-size: 38px 38px;
+}
+.button_repeat{
+    height: 100%;
+    width: 45px;
+    background-color: green;
+    background: url('img/Navigation/repeat.png') center center no-repeat;
+    background-size: 35px 35px;
+}
+.progress{
+    height: 100%;
+    background-color: ;
+    flex-grow: 1;
+}
+.button_playlist{
+    height: 100%;
+    width: 45px;
+    background: url('img/Navigation/song-playlist.png') center center no-repeat;
+    background-size: 35px 35px;
+}
+.button_like{
+    height: 100%;
+    width: 45px;
+    background: url('img/Menu/heart.png') center center no-repeat;
+    background-size: 35px 35px;
+}
+.button_volume{
+    height: 100%;
+    width: 45px;
+    background: url('img/Navigation/volume-up-indicator.png') center center no-repeat;
+    background-size: 35px 35px;
+}
+.progress_box{
+    margin-top: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
+    transform: translate(-10px,-15px)
+}
+.progress_line{
+    width: 100%;
+    height: 2px;
+    background-color: #2c3e50;
+}
+.progress_line_up{
+    width: 30%;
+    transform: translate(0, -2px);
+    height: 2px;
+    background-color: #f1c40f;
+}
+.time{
+    width: 100%;
+    height: auto;
+    font-size: 15px;
+    color: #2c3e50
+}
+.time_now{
+    float: left;
+}
+.all_time{
+    float: right;
+}
+.song_info{
+    display: flex;
+    color: #2c3e50;
+    transform: translate(6px,2px);
+}
