--- a/style.css
+++ b/style.css
@@ -244,9 +244,9 @@ html, body{
     background: url('img/Navigation/repeat.png') center center no-repeat;
     background-size: 25px 25px;
 }
-.progress{
+.song_info{
     height: 100%;
-    background-color: ;
+    background-color:;
     flex-grow: 1;
 }
 .button_playlist{
@@ -256,11 +256,28 @@ html, body{
     background-size: 25px 25px;
 }
 .button_like{
+    position: relative;
+    height: 100%;
+    width: 45px;
+}
+.button_like_off{
+    position: fixed;
     height: 100%;
     width: 45px;
     background: url('img/Menu/heart.png') center center no-repeat;
     background-size: 25px 25px;
+    z-index: 1;
 }
+.button_like_on{
+    position: fixed;
+    display: none;
+    height: 100%;
+    width: 45px;
+    background: url('img/Menu/heart%20(1).png') center center no-repeat;
+    background-size: 25px 25px;
+    z-index: 2;
+}
+
 .button_volume{
     height: 100%;
     width: 45px;
@@ -268,10 +285,7 @@ html, body{
     background-size: 25px 25px;
 }
 .progress_box{
-    margin-top: 20px;
-    margin-left: 15px;
-    margin-right: 15px;
-    transform: translate(-10px,-15px)
+    transform: translate(0px,-48px)
 }
 .progress_line{
     width: 100%;
@@ -284,20 +298,22 @@ html, body{
     height: 2px;
     background-color: #f1c40f;
 }
-.time{
-    width: 100%;
-    height: auto;
-    font-size: 15px;
-    color: #2c3e50
-}
-.time_now{
-    float: left;
-}
-.all_time{
-    float: right;
-}
+
 .song_info{
     display: flex;
+    flex-direction:column;
     color: #2c3e50;
     transform: translate(6px,2px);
+    margin-left: 10px;
+}
+.song_name{
+    float: left;
+    display: flex;
+    font-size: 18px;
+    font-weight: 600;
+    
+}
+.song_artist{
+    display: flex;
+    float: left;
 }
