--- a/style.css
+++ b/style.css
@@ -3,21 +3,31 @@ html, body{
     margin: 0 ;
     color: white;
     min-width: 285px;
+    overflow-x: hidden;
 }
 
 #main {
     width: 100%;
     background-color: #fafafafa;
     margin: 0 auto;
-    min-height: 100vh;
-    height: auto;
 }
 
-.content{
-    position: relative;
+.home_page{
+    position: absolute;
+    left: 100%;
     top: 60px;
-    height: 100%;
+    display: flex;
+    width: 100%;
+    height: auto;
+    justify-content: center;
     background-color: #fafafafa;
+    transition: 0.5s;
+    z-index: 1;
+}
+.home_page_active{
+    transition: 0.5s;
+    left: 0%;
+    box-shadow: 0 0 20px rgba(0,0,0,0.1);
 }
 
 .header{
@@ -27,7 +37,7 @@ html, body{
     text-align: center;
     position: fixed;
     top: 0;
-    z-index: 1;
+    z-index: 1000;
 }
 
 .header_1{
@@ -77,7 +87,7 @@ html, body{
     text-align: center;
     position: fixed;
     bottom: 0;
-    z-index: 1;
+    z-index: 1000;
 }
 
 .line_1{
@@ -316,4 +326,58 @@ html, body{
 .song_artist{
     display: flex;
     float: left;
+}
+
+.like_page{
+    position: absolute;
+    left: 100%;
+    top: 60px;
+    display: flex;
+    width: 100%;
+    height: auto;
+    justify-content: center;
+    background-color: blue;
+    transition: 0.5s;
+    z-index: 2;
+}
+.like_page_active{
+    transition: 0.5s;
+    left: 0%;
+    box-shadow: 0 0 20px rgba(0,0,0,0.1);
+}
+
+.find_page{
+    position: absolute;
+    left: 100%;
+    top: 60px;
+    display: flex;
+    width: 100%;
+    height: auto;
+    justify-content: center;
+    background-color: red;
+    transition: 0.5s;
+    z-index: 3;
+}
+.find_page_active{
+    transition: 0.5s;
+    left: 0%;
+    box-shadow: 0 0 20px rgba(0,0,0,0.1);
+}
+
+.account_page{
+    position: absolute;
+    left: 100%;
+    top: 60px;
+    display: flex;
+    width: 100%;
+    height: auto;
+    justify-content: center;
+    background-color: green;
+    transition: 0.5s;
+    z-index: 4;
+}
+.account_page_active{
+    transition: 0.5s;
+    left: 0%;
+    box-shadow: 0 0 20px rgba(0,0,0,0.1);
 }
