--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 html, body{
-    padding: 0 ;
-    margin: 0 ;
-    color: white;
-    min-width: 285px;
-    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
 }
 
 #main {
-    width: 100%;
+    position: fixed;
+    top: 0px;
+    left: 0px;
     background-color: #fafafafa;
-    margin: 0 auto;
+    width: 100%;
+    height: auto;
 }
 
 .home_page{
-    position: fixed;
+    position: absolute;
     left: 100%;
     top: 60px;
     display: flex;
@@ -27,7 +27,6 @@ html, body{
 .home_page_active{
     transition: 0.5s;
     left: 0%;
-    box-shadow: 0 0 20px rgba(0,0,0,0.1);
 }
 
 .header{
@@ -329,7 +328,7 @@ html, body{
 }
 
 .like_page{
-    position: fixed;
+    position: absolute;
     left: 100%;
     top: 60px;
     display: flex;
@@ -343,11 +342,10 @@ html, body{
 .like_page_active{
     transition: 0.5s;
     left: 0%;
-    box-shadow: 0 0 20px rgba(0,0,0,0.1);
 }
 
 .find_page{
-    position: fixed;
+    position: absolute;
     left: 100%;
     top: 60px;
     display: flex;
@@ -361,11 +359,10 @@ html, body{
 .find_page_active{
     transition: 0.5s;
     left: 0%;
-    box-shadow: 0 0 20px rgba(0,0,0,0.1);
 }
 
 .account_page{
-    position: fixed;
+    position: absolute;
     left: 100%;
     top: 60px;
     display: flex;
@@ -379,5 +376,4 @@ html, body{
 .account_page_active{
     transition: 0.5s;
     left: 0%;
-    box-shadow: 0 0 20px rgba(0,0,0,0.1);
 }
