--- a/found/found.css
+++ b/found/found.css
@@ -159,27 +159,24 @@ li{
     justify-content: center;
     text-align: center;
 }
-
-/*Play_bar*/
-.hr_play_bar{
-    margin: 0;
-    padding: 0;
-    transform: translate(0px, -48px);
-    border: none;
-    height: 2px;
-    color: #2c3e50;
-    background-color: #CECECE; 
-    justify-content: center;
-    text-align: center;
-}
 .play_bar{
-    transform: translate(0%, -51px);
+    transform: translate(0%, -46.5px);
     width: 100%;
     height: 45px;
     background-color: #f1f2f6 ;
-    position: absolute;
-    
+    position: fixed;
+    display: none;
+    transition: 0.5s;
 }
+.play_bar_active{
+    transition: 0.5s;
+    display: block;
+}
+.main_play-bar_active{
+    transition: 0.5s;
+    padding-bottom: 80px;
+}
+
 .play_bar_container{
     height: 100%;
     width: 98%;
@@ -261,9 +258,7 @@ li{
     background: url('../img/Navigation/volume-up-indicator.png') center center no-repeat;
     background-size: 25px 25px;
 }
-.progress_box{
-    transform: translate(0px,-49px)
-}
+
 .progress_line{
     width: 100%;
     height: 2px;
@@ -296,11 +291,12 @@ li{
 }
 
 .main{
+    transition: 0.5s;
     position: relative;
     width: 100%;
     height: auto;   
     padding-top: 62px;
-    padding-bottom: 80px;
+    padding-bottom: 33px;
 }
 
 .sing-in_page{
